# Operational_Control_with_iCub

./: CMakeLists.txt  README.md
app/scripts/: app.xml  system.xml
src/: CMakeLists.txt  main.cpp  src.kdev4
test/: CMakeLists.txt  roll_test.cpp  roll_test.h
test/fixtures/: rollTestFixture.xml
test/suits/: rollTestSuite.xml
